--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -1,6 +1,6 @@
 #projects {
-  background-color: $white-color;
-  color: $dark-blue-text;
+  background-color: $night-color;
+  color: $light-grey;
   margin-top: -10rem;
   padding-top: 15rem;
 
