--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,10 +1,12 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #023fb0;
+$secondary-color: #0060cd;
 
 $white-color: #fff;
+$night-color: #1a1826;
 
-$dark-grey: #333333;
+
+$dark-grey: #0b0b0e;
 $light-grey: #d2d2d2;
 
 $dark-blue-text: #272341; // For Headings
@@ -13,3 +15,25 @@ $dark-blue-text: #272341; // For Headings
 $default-font-size: 1.6rem;
 $big-font-size: 4rem;
 $mid-font-size: 2.5rem;
+
+
+// BODY BACKGROUND COLOR #1a1826
+// $primary-color: #023fb0;
+// $secondary-color: #0060cd;
+// TEXT COLOR #dcdbe5
+
+
+// $primary-color: #02aab0;
+// $secondary-color: #00cdac;
+
+// $white-color: #fff;
+
+// $dark-grey: #333333;
+// $light-grey: #d2d2d2;
+
+// $dark-blue-text: #272341; // For Headings
+
+// // FONT SIZE
+// $default-font-size: 1.6rem;
+// $big-font-size: 4rem;
+// $mid-font-size: 2.5rem;
