--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -38,6 +38,10 @@ a:hover {
   color: $dark-blue-text !important;
 }
 
+.bone-text{
+  color: $light-grey !important;
+}
+
 .text-color-main {
   @include supportColorForIE11();
 
