--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -114,7 +114,7 @@ $animationSpeed: 20s;
     content: "";
     height: 140px;
     position: absolute;
-    width: 300px;
+    width: 20%;
     z-index: 2;
   }
   
@@ -147,6 +147,7 @@ $animationSpeed: 20s;
     display: flex;
     transition: width 0.25s;
   }
+  
   .icon:hover{
     width: 100px;
     cursor: pointer;
